--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -22,7 +22,7 @@
                     <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/capacitacion.jpg}"/>
             </div><br>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Código:</label>
+                            <label class="col-sm-5 control-label">Código de Capacitacion:</label>
                             <div class="col-sm-7">
                                 <p class="" th:text="${capacitacion.codigocapacitacion}">codigo de capacitación</p>
                             </div>
@@ -34,76 +34,76 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Descripción Capacitación:</label>
+                            <label class="col-sm-5 control-label">Descripciónde de Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="" th:text="${capacitacion.descripcioncapacitacion}">Descripcion Capacitación</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Categoria Capacitación:</label>
+                            <label class="col-sm-5 control-label">Categoria de Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="" th:text="${capacitacion.categoriacapacitacion}">Descripcion Capacitación</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Desripción Categoría:</label>
+                            <label class="col-sm-5 control-label">Desripción de Categoría:</label>
                             <div class="col-sm-7">
                                 <p class="" th:text="${capacitacion.descripcioncategoria}">Descripción Categoría</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Departamento Responsable:</label>
+                            <label class="col-sm-5 control-label">Departamento Responsable de Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="" th:text="${capacitacion.departamentoresponsable}">Departamento Responsable</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Duración Capacitación en Horas:</label>
+                            <label class="col-sm-5 control-label">Duración de Capacitación en Horas:</label>
                             <div class="col-sm-7">
                                 <p class="" th:text="${capacitacion.duracionhoracapacitacion}">Duración Capacitación en Horas</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Duración Capacitación en Días:</label>
+                            <label class="col-sm-5 control-label">Duración de Capacitación en Días:</label>
                             <div class="col-sm-7">
                                 <p class="" th:text="${capacitacion.duraciondiacapacitacion}">Duración Capacitación en Días </p>
                             </div>
                         </div>
                          <div class="form-group">
-                            <label class="col-sm-5 control-label">Organismo Patrocinador:</label>
+                            <label class="col-sm-5 control-label">Organismo Patrocinador de Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="" th:text="${capacitacion.organismopatrocinador}">Organismo Patrocinador</p>
                             </div>
                         </div>
                          <div class="form-group">
-                            <label class="col-sm-5 control-label">Tipo de Evento:</label>
+                            <label class="col-sm-5 control-label">Tipo de Evento de Capacitación:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.tipoevento}">Tipo de Evento</p>
+                                <p class="form-control-static" th:text="${capacitacion.tipoevento}">Tipo de Evento de la Capacitación::</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Especialidad del Evento:</label>
+                            <label class="col-sm-5 control-label">Especialidad del Evento de Capacitación::</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${capacitacion.especialidadevento}">Especialidad del evento</p>
                             </div>
                         </div>
                          <div class="form-group">
-                            <label class="col-sm-5 control-label">País donde se Desarrolla la Capacitación:</label>
+                            <label class="col-sm-5 control-label">Pais de realización de Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${capacitacion.paiscapacitacion}">País donde se Desarrolla la Capacitación</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Fecha de Capacitación Desde:</label>
+                            <label class="col-sm-5 control-label">Fecha  de Inicio  Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${#calendars.format(capacitacion.fechacapacitaciondesde, 'dd/MM/yyyy')}">Fecha de Capacitación</p>
                             </div>
                         </div>
                     <div class="form-group">
-                            <label class="col-sm-5 control-label">Fecha de Capacitación Hasta:</label>
+                            <label class="col-sm-5 control-label">Fecha  Fin  Capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${#calendars.format(capacitacion.fechacapacitacionhasta, 'dd/MM/yyyy')}">Fecha de Capacitación</p>
                             </div>
