--- a/src/main/resources/templates/fragments/estado/estados.html
+++ b/src/main/resources/templates/fragments/estado/estados.html
@@ -11,15 +11,15 @@
                     </div>
      <div class="col-md-9">
           <div class="row text-center">
-                        <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
+                        <img src="../../static/image/images.jpeg" width="75" th:src="@{/image/images.jpeg}"/>
                     </div>
          <div th:if="${not #lists.isEmpty(estados)}">
         <table id="tablita" class="table table-striped">
             <thead>
             <tr>
-                <th>Codigo</th>
-                <th>Nombre</th>
-                <th>valor</th>
+                <th>Codigo Estado</th>
+                <th>Nombre Estado</th>
+                <th>Valor Estado</th>
                  <th>Acciones</th>
                 
             </tr>
