--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -18,18 +18,21 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <th:block th:include="../templates/menu"></th:block>
         </div> 
         <div class="col-md-8">
-             <br><br>
+             <br>
           <div class="row text-center">
-                        <img src="../../static/image/asistencia.png" width="150" th:src="@{/image/asistencia.png}"/>
+                        <img src="../../static/image/asistencia.png" width="75" th:src="@{/image/asistencia.png}"/>
             <!--<h3 align="center">Crear Asistencias de Capacitación</h3>-->
-            <div>
+            <div class="row text-center">
+                <br>
                 <form class="form-horizontal" id="formascap" th:object="${formasistenciacapacitancion}" th:action="@{../asistenciacapacitacion}" method="post">
                     
                      <!--<input type="hidden" name="codigocuadrodirectivo"/>-->
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Capacitación:</label>
+                        <label class="col-sm-4 control-label">Capacitación a Asignar(*):</label>
                         <div class="col-sm-6" >
+                           
                             <select class="form-control" name="codigocapacitacion.codigocapacitacion" >
+                                 <option value="-1">-- Seleccione una Capacitación --</option>
                                 <option th:each="c:${formasistenciacapacitancion.capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
                             </select>
                             <!--<input type="text" class="form-control" onkeypress="return valida(event)" th:field="*{codigoempleado.codigoempleado}"/>-->
@@ -42,21 +45,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
 
  
-<!--                     <div class="form-group">
-                        <label class="col-sm-2 control-label ">Codigo empleado:</label>
-                        <div class="col-sm-3">
-                            <input type="text" class="form-control numeros" required="true" name="codigoempleado"/>
-                        </div>
-                          <div class="popup col-sm-1"><b>
-                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('codigoempleado')" onmouseout ="javascript:ocultarAyuda('codigoempleado')">a</a></b>
-                        
-                        <span class="popuptext" id="codigoempleado">Seleccione el código empleado, debe ser los digitos del 1 al 9.!</span>
-                    </div>
-                    </div>-->
 
-                   
                                  <div class="form-group">
-                        <label class="col-sm-2 control-label">Empleado:</label>
+                        <label class="col-sm-4 control-label">Nombre del Empleado(*):</label>
                         <div class="col-sm-6">
                             <!--<select class="form-control" id="combo" th:field="*{asistenciaCapacitacion.codigoempleado.codigoempleado}" >-->
                             <select class="form-control" id="combo"  >
@@ -73,7 +64,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                                         </div>
                      <div class="form-group">
-                        <label class="col-sm-2 control-label ">Horas Recibidas:</label>
+                        <label class="col-sm-4 control-label ">Horas Recibidas de Capacitación:(*)</label>
                         <div class="col-sm-2">
                             <input type="text" class="form-control numeros" required="true" maxlength="3" name="horasrecibidas"/>
                         </div>
@@ -88,9 +79,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
                    
                     <div class="form-group">
-                        <label class="col-sm-2 control-label ">Puesto:</label>
+                        <label class="col-sm-4 control-label ">Puesto del Empleado(*):</label>
                         <div class="col-sm-6">
-                            <input type="text" id="puesto" class="form-control" maxlength="50"required="true" />
+                            <input type="text" id="puesto" class="form-control" maxlength="50"required="true"name="puesto" />
                         </div>
                              <div class="popup col-sm-1"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('puestos')" onmouseout ="javascript:ocultarAyuda('puestos')">a</a></b>
@@ -99,7 +90,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label ">Ubicación Física:</label>
+                        <label class="col-sm-4 control-label ">Ubicación Física de Capacitación(*):</label>
                         <div class="col-sm-6">
                             <input type="text" id="ubicacion" class="form-control " size="50" maxlength="50"required="true" name="ubicacionasistenciacapacitacion" />
                         </div>
@@ -110,7 +101,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label ">Telefono:</label>
+                        <label class="col-sm-4 control-label ">Telefono del Empleado(*):</label>
                         <div class="col-sm-2">
                             <input type="text" id="telefonoo"class="form-control num_telefono" required="true" name="telefono"/>
                         </div>
@@ -123,7 +114,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
 
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Correo:</label>
+                        <label class="col-sm-4 control-label">Correo del Empleado(*):</label>
                         <div class="col-sm-6">
                             <input type="email" id="correoo"class="form-control" size="50" maxlength="50" required="true" name="email"/>
                         </div>
