--- a/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
@@ -20,23 +20,23 @@
       <table id="tablita" class="table table-striped table-bordered" >
                     <thead>
             <tr>
-                <th>Código</th>
-                <th>Nombre</th>
-                <th>Descripción</th>
-                <th>Categoría</th>
-                <th>Descripción Categoría</th>
-                <th>Departamento Responsable</th>
-                <th>Nº Horas</th>
-                <th>Nº Días</th>
-                <th>Patrocinador</th>
-                <th>Tipo de Evento</th>
-                <th>Especialidad</th>
-                <th>País Capacitación</th>
-                <th>Fecha Capacitación Desde</th>
-                <th>Fecha Capacitación Hasta</th>
-                <th>Tipo Capacitación</th>
-                <th>Estado Capacitación</th>
-                <th>Nombre Capacitador</th>
+                <th>Código Capacitación</th>
+                <th> nombre de Capacitación</th>
+                <th>Descripción  Capacitación</th>
+                <th>Categoría  Capacitación</th>
+                <th>Descripción Categoría de Capacitación</th>
+                <th>Departamento Responsable Capacitación</th>
+                <th>Duración de Capacitación en Horas</th>
+                <th>Duración de Capacitación en Días</th>
+                <th>Patrocinador Capacitación</th>
+                <th>Tipo de Evento Capacitación</th>
+                <th>Especialidad Capacitación</th>
+                <th>Pais de realización Capacitación</th>
+                <th>Fecha  de Inicio de Capacitación </th>
+                <th>Fecha  Fin  Capacitación </th>
+                <th>Tipo  de Capacitación</th>
+                <th>Estado de  Capacitación</th>
+                <th>Nombre del  Capacitador</th>
                 <th></th>
                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
