--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -28,14 +28,29 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <div class="col-md-8"><br>
 <!--            <h3 align="center">Crear Capacitación</h3>-->
  <div class="row text-center">
-                    <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/capacitacion.jpg}"/>
+                    <img src="../../static/image/images.jpeg" width="75" th:src="@{/image/capacitacion.jpg}"/>
             </div><br>
             <div>
                 <form class="form-horizontal" th:object="${capacitacion}" th:action="@{../capacitacion}" method="post">
 
                     <input type="hidden" th:field="*{codigocapacitacion}"/>
 
+  <div class="form-group">
+                        <label class="col-sm-2 control-label">Nombre del apacitador(*):</label>
+                        <div class="col-sm-5">
+                                                    <!--<input type="number" class="form-control" th:field="*{codigocapacitador.codigocapacitador}"/>-->
 
+                            <select class="form-control" th:field="*{codigocapacitador.codigocapacitador}" >
+                                   <option value="-1">-- Seleccione el Capacitador --</option>
+                                <option th:each="c:${capacitadores}" th:value="${c.codigocapacitador}" th:text="${c.nombrecapacitador}"></option>
+                            </select>
+                        </div>
+                          <div class="popup col-sm-1"><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('capacitador')" onmouseout ="javascript:ocultarAyuda('capacitador')">a</a></b>
+                        
+                        <span class="popuptext" id="capacitador">Seleccione El Capacitador. Solo se permiten  50 Caracteres!</span>
+                    </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Nombre de Capacitación(*):</label>
                         <div class="col-sm-5">
@@ -48,7 +63,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Descripción Capacitación(*):</label>
+                        <label class="col-sm-2 control-label">Descripción de Capacitación(*):</label>
                         <div class="col-sm-9">
                             <textarea rows="4" cols="50" class="form-control" size="500" maxlength="500"  required="true" th:field="*{descripcioncapacitacion}">
 
@@ -63,17 +78,18 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
 
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Categoria Capacitación(*):</label>
+                        <label class="col-sm-2 control-label">Categoria  de Capacitación(*):</label>
                         <div class="col-sm-7">
                             <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
                              <select class="form-control" required="true" th:field="*{categoriacapacitacion}" >
+                                  <option value="-1">-- Seleccione una Categoría  de la Capacitación --</option>
                                 <option th:each="c:${catCap}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
                             
                             </select>
                         </div>
                     </div>
                     <div class="form-group">
-                       <label class="col-sm-2 control-label">Descripción Categoría(*):</label>
+                       <label class="col-sm-2 control-label">Descripción de Categoría de Capacitación(*):</label>
                         <div class="col-sm-9">
                             <textarea rows="4" cols="50" class="form-control" size="500" maxlength="500"  required="true" th:field="*{descripcioncategoria}">
 
@@ -89,10 +105,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
 
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Departamento Responsable(*):</label>
-                        <div class="col-sm-5">
+                        <label class="col-sm-2 control-label">Departamento Responsable de Capacitación(*):</label>
+                        <div class="col-sm-7">
                             <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
                             <select class="form-control" required="true" th:field="*{departamentoresponsable}">
+                                 <option value="-1">-- Seleccione el Departamento Responsable de la Capacitación --</option>
                                 <option th:each="c:${deptoResponsalbe}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
                             
                             </select>
@@ -127,7 +144,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Organismo Patrocianador(*):</label>
+                        <label class="col-sm-2 control-label">Organismo Patrocianador de Capacitación(*):</label>
                         <div class="col-sm-9">
                                         <textarea rows="2" cols="50" class="form-control" size="200" maxlength="500"  required="true" th:field="*{organismopatrocinador}">
 
@@ -141,7 +158,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Tipo Evento(*):</label>
+                        <label class="col-sm-2 control-label">Tipo Evento de Capacitación(*):</label>
                         <div class="col-sm-9">
                                         <textarea rows="2" cols="50" class="form-control" size="200" maxlength="200"  required="true" th:field="*{tipoevento}">
 
@@ -155,7 +172,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         </div>
                     
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Especialidad de Evento(*):</label>
+                        <label class="col-sm-2 control-label">Especialidad del Evento de Capacitación(*):</label>
                         <div class="col-sm-9">
                                                   <textarea rows="2" cols="50" class="form-control" size="200" maxlength="200"  required="true" th:field="*{especialidadevento}">
 
@@ -168,7 +185,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Pais de realización de Capacitación(*):</label>
+                        <label class="col-sm-2 control-label">Pais de realización Capacitación(*):</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" required="true" size="100" maxlength="100"  th:field="*{paiscapacitacion}"/>
                         </div>
@@ -179,7 +196,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Fecha Desde(*):</label>
+                        <label class="col-sm-2 control-label">Fecha  de Inicio  Capacitación(*):</label>
                         <div class="col-sm-2">
                             <input type="text" class="form-control fecha_format" id="fdesde" required="true" th:field="*{fechacapacitaciondesde}" onchange="isDat(this.value,'fdesde');Fechas(this.value,$('#fhasta').val().toString(),'fdesde','fhasta')"/>
                         </div>
@@ -190,7 +207,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Fecha  Hasta(*):</label>
+                        <label class="col-sm-2 control-label">Fecha  Fin Capacitación(*):</label>
                         <div class="col-sm-2">
                             <input type="text" class="form-control fecha_format" id="fhasta" required="true" th:field="*{fechacapacitacionhasta}" onchange="isDat(this.value,'fhasta');Fechas($('#fdesde').val().toString(),this.value,'fdesde','fhasta')"/>
                         </div>
@@ -212,38 +229,24 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
 
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Estado de la Capacitación(*):</label>
+<!--                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Estado de Capacitación(*):</label>
                         <div class="col-sm-2">
                              <select class="form-control" required="true" th:field="*{estadocapacitacion}">
                                 <option th:each="c:${estadoCap}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
                             
                             </select>
-                            <!--<input type="text" class="form-control numeros" th:field="*{estadocapacitacion}"/>-->
+                            <input type="text" class="form-control numeros" th:field="*{estadocapacitacion}"/>
                         </div>
                          <div class="popup col-sm-1"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('estadocapacitacion')" onmouseout ="javascript:ocultarAyuda('estadocapacitacion')">a</a></b>
                         
                         <span class="popuptext" id="estadocapacitacion">Selecccione el estad de la Capacitacion!!!!. </span>
                     </div>
-                    </div>
+                    </div>-->
                     
                   
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Capacitador(*):</label>
-                        <div class="col-sm-5">
-                                                    <!--<input type="number" class="form-control" th:field="*{codigocapacitador.codigocapacitador}"/>-->
-
-                            <select class="form-control" th:field="*{codigocapacitador.codigocapacitador}" >
-                                <option th:each="c:${capacitadores}" th:value="${c.codigocapacitador}" th:text="${c.nombrecapacitador}"></option>
-                            </select>
-                        </div>
-                          <div class="popup col-sm-1"><b>
-                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('capacitador')" onmouseout ="javascript:ocultarAyuda('capacitador')">a</a></b>
-                        
-                        <span class="popuptext" id="capacitador">Seleccione El Capacitador. Solo se permiten  50 Caracteres!</span>
-                    </div>
-                    </div>
+                  
 
 
                     <div class="col-md-12">
