--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -23,23 +23,17 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <div class="col-md-8">
             <!--<h3 align="center">Crear Capacitador</h3>-->
              <div class="row text-center">
-                    <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/capacitacion.jpg}"/>
+                    <img src="../../static/image/images.jpeg" width="75" th:src="@{/image/capacitacion.jpg}"/>
             </div><br>
             <div>
                 <form class="form-horizontal" th:object="${capacitador}" th:action="@{/capacitadores/capacitador}" method="post">
-                    <!--            <input type="hidden" th:field="*{codigocapacitador}"/>
-                                <input type="hidden" th:field="*{nombrecapacitador}"/>-->
-                    <!--            <div class="form-group">
-                                    <label class="col-sm-2 control-label">Codigo de Capacitador:</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" th:field="*{codigocapacitador}"/>
-                                    </div>
-                                </div>-->
+                
 
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Empleado Responsable del Capacitador(*):</label>
+                        <label class="col-sm-3 control-label">Empleado Responsable del Capacitador(*):</label>
                         <div class="col-sm-5" >
                             <select class="form-control"  th:field="*{codigoempleado.codigoempleado}" >
+                                 <option value="0">-- Seleccione un Encargado del Capacitador --</option>
                                 <option th:each="c:${empleados}" th:value="${c.codigoempleado}" th:text="${c.nombreempleado}+', '+${c.apellidoempleado}"></option>
                             </select>
                         </div>
@@ -51,8 +45,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
 
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Nombre Capacitador(*):</label>
-                        <div class="col-sm-9">
+                        <label class="col-sm-3 control-label">Nombre Capacitador(*):</label>
+                        <div class="col-sm-8">
                             <input type="text" class="form-control"required="true" size="100" maxlength="100" th:field="*{nombrecapacitador}"/>
                              <small class="form-text text-danger" th:if="${#fields.hasErrors('nombrecapacitador')}" th:errors="*{nombrecapacitador}"></small>
                         </div>
@@ -63,8 +57,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Tema de Dominio(*):</label>
-                        <div class="col-sm-9">
+                        <label class="col-sm-3 control-label">Tema de Dominio(*):</label>
+                        <div class="col-sm-8">
                             <select class="form-control"  required="true" th:field="*{temadominio}" >
                              <option th:each="c:${dominio}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
 
@@ -79,8 +73,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                    
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Institución(*):</label>
-                        <div class="col-sm-9">
+                        <label class="col-sm-3 control-label">Institución que Pertenece Capacitador(*):</label>
+                        <div class="col-sm-8">
                             
                             <select class="form-control" required="true" th:field="*{institucioncapacitador}" >
                                 <option th:each="c:${tinst}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
@@ -94,8 +88,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Tipo Capacitador(*):</label>
-                        <div class="col-sm-9">
+                        <label class="col-sm-3 control-label">Tipo Capacitador(*):</label>
+                        <div class="col-sm-8">
 
                             <select class="form-control" required="true" th:field="*{tipocapacitador}" >
                                 <option th:each="c:${tipoCapacitador}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
@@ -109,8 +103,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Tipo Agrupación(*):</label>
-                        <div class="col-sm-9">
+                        <label class="col-sm-3 control-label">Tipo Agrupación(*):</label>
+                        <div class="col-sm-8">
 
                             <select class="form-control" required="true"th:field="*{tipoagrupacion}" >
                                   <option th:each="c:${tipoAgrupacion}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
@@ -124,7 +118,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">DUI(*):</label>
+                        <label class="col-sm-3 control-label">DUI Capacitador(*):</label>
                         <div class="col-sm-2">
                             <input type="text" class="form-control num_dui" required="true" th:field="*{duicapacitador}"/>
                              <small class="form-text text-danger" th:if="${#fields.hasErrors('duicapacitador')}" th:errors="*{duicapacitador}"></small>
@@ -136,7 +130,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">NIT(*):</label>
+                        <label class="col-sm-3 control-label">NIT Capacitador(*):</label>
                         <div class="col-sm-2">
                             <input type="text" class="form-control num_nit" required="true"th:field="*{nitcapacitador}"/>
                              <small class="form-text text-danger" th:if="${#fields.hasErrors('nitcapacitador')}" th:errors="*{nitcapacitador}"></small>
@@ -148,7 +142,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Carnet(*):</label>
+                        <label class="col-sm-3 control-label">Carnet de Residencia(*):</label>
                         <div class="col-sm-2">
                             <input type="text" class="form-control numeros" required="true" maxlength="5" onkeypress="return valida(event)" th:field="*{carnetresidencia}"/>
                               <small class="form-text text-danger" th:if="${#fields.hasErrors('carnetresidencia')}" th:errors="*{carnetresidencia}"></small>
@@ -160,7 +154,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Teléfono(*):</label>
+                        <label class="col-sm-3 control-label">Teléfono Fijo Capacitador(*):</label>
                         <div class="col-sm-2">
                             <input type="text" class="form-control num_telefono" required="true" th:field="*{telefonocapacitador}"/>
                             <small class="form-text text-danger" th:if="${#fields.hasErrors('telefonocapacitador')}" th:errors="*{telefonocapacitador}"></small>
@@ -172,7 +166,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Móvil(*):</label>
+                        <label class="col-sm-3 control-label">Móvil Capacitador(*):</label>
                         <div class="col-sm-2">
                             <input type="text" class="form-control num_telefono" required="true" th:field="*{telefonomovilcapacitador}"/>
                             <small class="form-text text-danger" th:if="${#fields.hasErrors('telefonomovilcapacitador')}" th:errors="*{telefonomovilcapacitador}"></small>
@@ -184,7 +178,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Email(*):</label>
+                        <label class="col-sm-3 control-label">Email Capacitador(*):</label>
                         <div class="col-sm-5">
                             <input type="email" class="form-control" size="50" maxlength="50" required="true" th:field="*{emailcapacitador}"/>
                              <!--<small class="form-text text-danger" th:if="${#fields.hasErrors('emailcapacitador')}" th:errors="*{emailcapacitador}"></small>-->
