--- a/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
@@ -19,95 +19,90 @@
             <form class="form-horizontal">
  <br><br>
           <div class="row text-center">
-                        <img src="../../static/image/capacitador.png" width="150" th:src="@{/image/capacitador.png}"/>
+                        <img src="../../static/image/capacitador.png" width="75" th:src="@{/image/capacitador.png}"/>
                          </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Código capacitador:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Código capacitador:</label>
+                    <div class="col-sm-8">
                         <p class="" th:text="${capacitador.codigocapacitador}">codigo capacitador</p></div>
                     <!--<p class="" th:text="${capacitador.codigoempleado.nombreempleado}">codigo capacitador</p></div>-->
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Nombre Capacitador:</label>
-                    <div class="col-sm-10">
-                        <p class="" th:text="${capacitador.nombrecapacitador}">Nombre</p>
-                    </div>
-                </div>
-  <div class="form-group">
-                                    <label class="col-sm-2 control-label">EmpleadoCapacitador</label>
-                                    <div class="col-sm-10">
+ <div class="form-group">
+                                    <label class="col-sm-4 control-label">Responsable del Capacitador</label>
+                                    <div class="col-sm-8">
                                         <p class="form-control-static" th:text="${capacitador.codigoempleado.nombreempleado}">Codigo Empleado</p>
                                          <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
                                     </div>
                                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Tema de dominio:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Nombre Capacitador:</label>
+                    <div class="col-sm-8">
+                        <p class="" th:text="${capacitador.nombrecapacitador}">Nombre</p>
+                    </div>
+                </div>
+  
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">Tema de dominio:</label>
+                    <div class="col-sm-8">
                         <p class="" th:text="${capacitador.temadominio}">Tema de dominio</p>
                     </div>
                 </div>
                          <div class="form-group">
-                    <label class="col-sm-2 control-label">Institución:</label>
-                    <div class="col-sm-10">
-                        <p class="" th:text="${capacitador.institucioncapacitador}">Institución</p>
+                    <label class="col-sm-4 control-label">Institución que Pertenece Capacitador</label>
+                    <div class="col-sm-8">
+                        <p class="" th:text="${capacitador.institucioncapacitador}">Institución a Capacitar</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Tipo Capacitador:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Tipo Capacitador:</label>
+                    <div class="col-sm-8">
                         <p class="" th:text="${capacitador.tipocapacitador}">Tipo Capacitador</p>
                     </div>
                 </div>
                      <div class="form-group">
-                    <label class="col-sm-2 control-label">Tipo Agrupación:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Tipo Agrupación:</label>
+                    <div class="col-sm-8">
                         <p class="" th:text="${capacitador.tipoagrupacion}">Tipo Agrupación</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Dui:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Dui Capacitador:</label>
+                    <div class="col-sm-8">
                         <p class="" th:text="${capacitador.duicapacitador}">Dui</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Nit:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Nit Capacitador:</label>
+                    <div class="col-sm-8">
                         <p class="" th:text="${capacitador.nitcapacitador}">Nit</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Carnet de Residencia:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Carnet de Residencia:</label>
+                    <div class="col-sm-8">
                         <p class="" th:text="${capacitador.carnetresidencia}">Carnet de Residencia</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Telefono Fijo:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Telefono Fijo Capacitador:</label>
+                    <div class="col-sm-8">
                         <p class="" th:text="${capacitador.telefonocapacitador}">Telefono Fijo</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Telefono Movil:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Telefono Movil Capacitador:</label>
+                    <div class="col-sm-8">
                         <p class="" th:text="${capacitador.telefonomovilcapacitador}">Telefono Movil</p>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Correo Electronico:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Email Capacitador:</label>
+                    <div class="col-sm-8">
                         <p class="" th:text="${capacitador.emailcapacitador}">Correo Electronico</p>
                     </div>
                 </div>
-                               <div class="form-group">
-                                    <label class="col-sm-2 control-label">Empleado Capacitador</label>
-                                    <div class="col-sm-10">
-                                        <p class="form-control-static" th:text="${capacitador.codigoempleado.nombreempleado}">Codigo Empleado</p>
-                                         <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
-                                    </div>
-                                </div>
+                             
               
             </form>
               <div class="col-md-12">
