--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>Listado de Comites</title>
+        <title>Listado de Comités</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
@@ -11,20 +11,21 @@
                 <th:block th:include="../templates/menu"></th:block>
             </div>
             <div class="col-md-9">
-                <br><br>
+                <br>
                 <div class="row text-center">
-                    <img src="../../static/image/roles.png" width="150" th:src="@{/image/roles.png}"/>
+                    <img src="../../static/image/roles.png" width="75" th:src="@{/image/roles.png}"/>
+                    <br>
                     <table id="tablita" class="table table-striped table-bordered" >
                         <thead> 
                             <tr>
-                                <th>Código</th>
-                                <th>Nombre</th>
-                                <th>Responsable</th>
-                                <th>Descripcion</th>
-                                <th>Nº de Acuerdo</th>
-                                <th>Miembros maximos</th>
-                                <th>Fecha Deesde</th>
-                                <th>Fecha Hasta</th>
+                                <th>Código de Comité</th>
+                                <th>Nombre del Comité </th>
+                                <th>Responsable del Comité</th>
+                                <th>Descripcion del Comité</th>
+                                <th>Nº de Acuerdo del Comité</th>
+                                <th>Miembros maximos del Comité</th>
+                                <th>Fecha Desde del Comité</th>
+                                <th>Fecha Hasta del Comité</th>
                                 <th></th>
                                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
                                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
