--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -15,83 +15,66 @@
         </div>
         <div class="col-md-8">
             <!--<h3 align="center">Detalle  del Comite</h3>-->
-            <div class="row text-center">
+            <div class="row text-center" >
                 <br>
-                        <img src="../../static/image/roles.png" width="150" th:src="@{/image/roles.png}"/>
+                        <img src="../../static/image/roles.png" width="75" th:src="@{/image/roles.png}"/>
             </div>
             <div>
                 <br>
                 <form class="form-horizontal">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Código de Comité:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.codigocomite}">Codigo de comite</p></div>
                         </div>
-<!--                        <div class="form-group">
-                            <label class="col-sm-5 control-label">DUI:</label>
-                            <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.dui}">DUI</p>
-                            </div>
-                        </div>
+
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">NIT:</label>
-                            <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.nit}">NIT</p>
-                            </div>
-                        </div>-->
-                        <div class="form-group">
-                            <label class="col-sm-5 control-label">Nombre de Comité:</label>
+                            <label class="col-sm-5 control-label">Nombre del Comité:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.nombrecomite}">Nombre de comite</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Responsable Comité:</label>
+                            <label class="col-sm-5 control-label">Responsable del  Comité:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.codigoempleado.nombreempleado}">Responsable</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Desripción de Comité:</label>
+                            <label class="col-sm-5 control-label">Desripción del Comité:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.desripcioncomite}">Desripción de Comite</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Número de Acuerdo:</label>
+                            <label class="col-sm-5 control-label">Número de Acuerdo del Comité:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.numeroacuerdocomite}">Numero de Acuerdo</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Miembros Máximos:</label>
+                            <label class="col-sm-5 control-label">Miembros Máximos del Comité:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.miembromaximo}">Miembros Maximos</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Fecha Desde:</label>
+                            <label class="col-sm-5 control-label">Fecha Inicio del Comité:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${#calendars.format(comite.fechadesdecomite, 'dd/MM/yyyy')}">Fecha Desde</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Fecha Hasta :</label>
+                            <label class="col-sm-5 control-label">Fecha Hasta del Comité :</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${#calendars.format(comite.fechahastacomite, 'dd/MM/yyyy')}">Fecha Hasta </p>
                             </div>
                         </div>
-                        
-<!--                        <div class="form-group">
-                            <label class="col-sm-7 control-label">Empleado:</label>
-                            <div class="col-sm-5">
-                                <p class="form-control-static" th:text="${comite.codigoempleado.nombreempleado}">Fecha hasta </p>
-                            </div>
-                        </div>-->
+ 
                         
                     </div> 
 
