--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
@@ -18,10 +18,10 @@
         <div>
             <form class="form-horizontal">
 <div class="row text-center">
-    <img src="../../static/image/cuadro.png" width="100" th:src="@{/image/cuadro.png}"/></div>
+    <img src="../../static/image/cuadro.png" width="75" th:src="@{/image/cuadro.png}"/></div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Código</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Código Cuadro Directivo:</label>
+                    <div class="col-sm-7">
                         <p class="form-control-static" th:text="${cuadrodirectivo.codigocuadrodirectivo}">cuadro Id</p></div>
                 </div>
 <!--                <div class="form-group">
@@ -31,22 +31,22 @@
                     </div>
                 </div>-->
  <div class="form-group">
-                                    <label class="col-sm-2 control-label">Responsable</label>
-                                    <div class="col-sm-10">
+                                    <label class="col-sm-4 control-label">Responsable Directo:</label>
+                                    <div class="col-sm-7">
                                         <p class="form-control-static" th:text="${cuadrodirectivo.codigoempleado.nombreempleado}">Codigo Empleado</p>
                                          <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
                                     </div>
                                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Área:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Área a que Pertenece:</label>
+                    <div class="col-sm-7">
                         <p class="form-control-static" th:text="${cuadrodirectivo.area}">Area</p>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Descripción:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Descripción del Motivo:</label>
+                    <div class="col-sm-7">
                         <p class="form-control-static" th:text="${cuadrodirectivo.desripcioncuadrodirectivo}">Descripción</p>
                     </div>
                 </div>
@@ -55,14 +55,14 @@
               
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha  Desde:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Fecha Presentación Desde:</label>
+                    <div class="col-sm-7">
                         <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentaciondesde, 'dd/MM/yyyy')}">Valor de estado</p>
                     </div>
                 </div>
  <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha Hasta:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Fecha Presentación Hasta:</label>
+                    <div class="col-sm-7">
                         <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentacionhasta, 'dd/MM/yyyy')}">Valor de estado</p>
                     </div>
                 </div>
