--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
@@ -19,14 +19,15 @@
             <!--<h3 align="center" >Crear Diagnostico</h3>-->
                   <div class="col-md-9">
           <div class="row text-center">
-                        <img src="../../static/image/evaluacion.png" width="150" th:src="@{/image/evaluacion.png}"/>
+                        <img src="../../static/image/evaluacion.png" width="75" th:src="@{/image/evaluacion.png}"/>
                          </div>
             <div>
+                <br>
                 <form class="form-horizontal" th:object="${diagnosticocapacitacion}" th:action="@{../diagnosticocapacitacion}" method="post">
            <input type="hidden" th:field="*{codigodiagnosticocapacitacion}"/>
                 <div class="form-group">
-                <label class="col-sm-5 control-label">Capacitación:</label>
-                <div class="col-sm-5">
+                <label class="col-sm-5 control-label"> Nombre Capacitación:</label>
+                <div class="col-sm-6">
                     <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
                          <option value="0">-- Seleccione la Capacitación --</option>
                                 <option th:each="c:${capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
@@ -41,8 +42,9 @@
             </div>
                <div class="form-group">  
            <label class="col-sm-5 control-label">Nombre Dirección:</label>
-                <div class="col-sm-5">
+                <div class="col-sm-6">
                      <select class="form-control" th:field="*{direccion}" >
+                          <option value="0">-- Seleccione una Dirección --</option>
 <!--                                    <option>Recursos Humanos</option>
                                     <option>Finanzzas</option>
                                     <option>Jurisprudencia</option>
