--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
@@ -26,9 +26,10 @@
         </div> 
         <div class="col-md-8">
             <div class="row text-center">
-                        <img src="../../static/image/evaluacion.png" width="100" th:src="@{/image/evaluacion.png}"/>
+                        <img src="../../static/image/evaluacion.png" width="75" th:src="@{/image/evaluacion.png}"/>
 <!--            <h3 align="center">Registro de Incapacidades</h3>-->
             <div>
+                <br>
                 <form class="form-horizontal" th:object="${evaluacioncapacitacion}" th:action="@{../evaluacioncapacitacion}" method="post">
 
                     <div class="col-md-6">
@@ -36,9 +37,9 @@
 
                         <div class="form-group">
                             <label class="col-sm-3 control-label">Capacitación:</label>
-                            <div class="col-sm-7">
+                            <div class="col-sm-8">
                                 <select class="form-control" name="codigocapacitacion.codigocapacitacion">
-                                    <option value="">-- Seleccione la Capacitación --</option>
+                                    <option value="0">-- Seleccione la Capacitación --</option>
                                     <option th:each="c:${capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
                                 </select>
                             </div>
@@ -74,7 +75,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">Dominio del tema(*):</label>
+                            <label class="col-sm-3 control-label">Dominio del Tema(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
                                 <select class="form-control" name="dominiotema" >
@@ -140,7 +141,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">Aclara dudas con precisión(*):</label>
+                            <label class="col-sm-3 control-label">Aclara dudas con Precisión(*):</label>
                             <div class="col-sm-3">
 
                                 <select class="form-control" name="alclaradudas" >
@@ -172,7 +173,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">Satisface en el tema(*):</label>
+                            <label class="col-sm-3 control-label">Satisface en el Tema(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{nivelpuesto}"/>-->
                                 <select class="form-control" name="satifacciondetema" >
@@ -188,7 +189,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">Comprensión del tema(*):</label>
+                            <label class="col-sm-3 control-label">Comprensión del Tema(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
                                 <select class="form-control" name="comprenciondetema" >
@@ -205,7 +206,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">Planeación del tiempo(*):</label>
+                            <label class="col-sm-3 control-label">Planeación del Tiempo(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
                                 <select class="form-control" name="planeaciontiempo" >
@@ -251,7 +252,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">El contenido Es aplicable a su trabajo(*):</label>
+                            <label class="col-sm-3 control-label">El contenido Es aplicable a su Trabajo(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
                                 <select class="form-control" name="contenidoaplicadotrabajo" >
@@ -267,7 +268,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">Satisfecho con el contenido(*):</label>
+                            <label class="col-sm-3 control-label">Satisfecho con el Contenido(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
                                 <select class="form-control" name="satisfechocontenido" >
@@ -297,7 +298,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">El equipo tecnologico es el adecuado(*):</label>
+                            <label class="col-sm-3 control-label">El equipo tecnologico es el Adecuado(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
                                 <select class="form-control" name="equipotecnologico" >
@@ -327,7 +328,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">Tiempo Capacitación fue optimo(*):</label>
+                            <label class="col-sm-3 control-label">Tiempo Capacitación fue Optimo(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
                                 <select class="form-control" name="tiempocapacitacionoptimo" >
