--- a/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
@@ -22,41 +22,42 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Código inasistencia:</label>
-                    <div class="col-sm-10">
+                    <div class="col-md-12">
+                    <label class="col-sm-6 control-label">Código inasistencia:</label>
+                    <div class="col-sm-6">
                         <p class="" th:text="${inasistencia.codigoinasistencia}">codigo inasistencia</p></div>
                     <!--<p class="" th:text="${capacitador.codigoempleado.nombreempleado}">codigo capacitador</p></div>-->
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Empleado:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-6 control-label">Empleado:</label>
+                    <div class="col-sm-6">
                         <p class="" th:text="${inasistencia.codigoempleado.nombreempleado}">Empleado</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Motivo de Inasistencia</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-6 control-label">Motivo de Inasistencia</label>
+                    <div class="col-sm-6">
                         <p class="form-control-static" th:text="${inasistencia.motivoinasistencia}">justiticacion</p>
                         <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Justiciación</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-6 control-label">Justiciación Inasistencia</label>
+                    <div class="col-sm-6">
                         <p class="form-control-static" th:text="${inasistencia.constanciainasistencia}">justiticacion</p>
                         <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
                     </div>
                 </div>
                 
                         <div class="form-group">
-                    <label class="col-sm-2 control-label">Inicio Inasistencia:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-6 control-label">Inicio Inasistencia:</label>
+                    <div class="col-sm-6">
                         <p class="" th:text="${#calendars.format(inasistencia.fechadesdeinasistencia, 'dd/MM/yyyy')}">Fecha Hasta</p>
                     </div>
                 </div>
                          <div class="form-group">
-                    <label class="col-sm-2 control-label">Fin Inasistencia</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-6 control-label">Fin Inasistencia</label>
+                    <div class="col-sm-6">
                         <p class="" th:text="${#calendars.format(inasistencia.fechahastainasistencia, 'dd/MM/yyyy')}">Fecha Hasta</p>
                     </div>
                 </div>
