--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
@@ -12,7 +12,7 @@
      <div class="col-md-9">
          <br><br>
           <div class="row text-center">
-                        <img src="../../static/image/formacion.png" width="200" th:src="@{/image/formacion.png}"/>
+                        <img src="../../static/image/formacion.png" width="75" th:src="@{/image/formacion.png}"/>
     <div th:if="${not #lists.isEmpty(nivelescolaridades)}">
           <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
              <thead>
@@ -23,8 +23,8 @@
                  <th>Finalizado</th>
                   <th>Titulo Obtenido</th>
                    <th>País del Nivel Escolar</th>
-                   <th>Fecha Desde</th>
-                   <th>Fecha Hasta</th>
+                   <th>Fecha Inicio NIvel Escolar</th>
+                   <th>Fecha Fin Nivel Escolar</th>
                  <th></th>
                  <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
                  <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
